# collision_detection

./: CMakeLists.txt  LICENSE  README.md  manifest.xml
include/: CollisionConfig.hpp  CollisionDetection.hpp  CollisionFactory.hpp
include/abstract/: AbstractCollisionDetection.hpp  MeshLoader.hpp
include/collision_detection/: CollisionConfig.hpp  CollisionFactory.hpp
include/collision_detection/abstract/: AbstractCollisionDetection.hpp
include/collision_detection/fcl_wrapper/: CollisionData.hpp  FCLCollisionDetection.hpp
include/fcl_wrapper/: CollisionData.hpp  CollisionObjectAssociatedData.hpp  FCLCollisionDetection.hpp
src/: CMakeLists.txt  CollisionDetection.cpp  CollisionFactory.cpp  Dummy.cpp  Dummy.hpp  Main.cpp  collision_detection.pc.in
src/abstract/: AbstractCollisionDetection.cpp  MeshLoader.cpp
src/fcl_wrapper/: CollisionObjectAssociatedData.cpp  FCLCollisionDetection.cpp
test/: CMakeLists.txt  test_Dummy.cpp  test_collision_detection.cpp
